<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/send_message_action"
        android:showAsAction="ifRoom|withText"
        android:title="@string/message_send" />
    <item
        android:id="@+id/send_message_attachment_action"
        android:showAsAction="ifRoom|withText"
        android:title="@string/message_attachment" />
</menu>