<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cz.vsb.gis.ruz76.patrac.android.activities.MessageSendActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/messageTextSend"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_margin="10dp"
            android:ems="10"
            android:inputType="textMultiLine" />

        <ListView
            android:id="@+id/usersListView"
            android:layout_width="match_parent"
            android:layout_height="455dp"
            android:layout_margin="10dp"
            android:choiceMode="multipleChoice"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="8dp"
            tools:listSelector="@drawable/listitem_selector">

        </ListView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
